G1: Rename G1EvacFailureInjector appropriately

XMLWordPrintable

    • gc
    • b27

      With JDK-8318706 there are now two reasons why an evacuation failure may happen: region pinning and allocation failure.

      The G1EvacFailureInjector actually injects allocation failures, not general evacuation failures, so rename it.

      Also change the (debug) VM options to reflect the exact meaning.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: