8319313: G1: Rename G1EvacFailureInjector appropriately

Reviewed-by: mli, iwalulya, ayang