src/hotspot/share/gc/g1/g1_globals.hpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,18 +27,18 @@
 
 #include "runtime/globals_shared.hpp"
 
-// Enable evacuation failure injector by default in non-product builds.
+// Enable allocation failure injector by default in non-product builds.
 
-#ifdef EVAC_FAILURE_INJECTOR
-#error "EVAC_FAILURE_INJECTOR already defined"
+#ifdef ALLOCATION_FAILURE_INJECTOR
+#error "ALLOCATION_FAILURE_INJECTOR already defined"
 #endif
 #ifndef PRODUCT
-#define EVAC_FAILURE_INJECTOR 1
+#define ALLOCATION_FAILURE_INJECTOR 1
 #else
-#define EVAC_FAILURE_INJECTOR 0
+#define ALLOCATION_FAILURE_INJECTOR 0
 #endif
 
-#if EVAC_FAILURE_INJECTOR
+#if ALLOCATION_FAILURE_INJECTOR
 #define GC_G1_EVACUATION_FAILURE_FLAGS(develop,                             \
                                        develop_pd,                          \
                                        product,                             \
@@ -47,38 +47,38 @@
                                        range,                               \
                                        constraint)                          \
                                                                             \
-  product(bool, G1EvacuationFailureALot, false,                             \
-          "Force use of evacuation failure handling during certain "        \
-          "evacuation pauses")                                              \
+  product(bool, G1GCAllocationFailureALot, false,                           \
+          "Force execution of evacuation failure handling by inducing "     \
+          "allocation failures during certain young collection pauses")     \
                                                                             \
-  product(uintx, G1EvacuationFailureALotCount, 1000,                        \
-          "Number of successful evacuations between evacuation failures "   \
-          "occurring at object copying per thread")                         \
+  product(uintx, G1GCAllocationFailureALotCount, 1000,                      \
+          "Number of successful evacuations between induced allocation "    \
+          "failures occurring at object copying per thread")                \
                                                                             \
-  product(uintx, G1EvacuationFailureALotInterval, 5,                        \
+  product(uintx, G1GCAllocationFailureALotInterval, 5,                      \
           "Total collections between forced triggering of evacuation "      \
           "failures")                                                       \
                                                                             \
-  product(bool, G1EvacuationFailureALotDuringConcMark, true,                \
-          "Force use of evacuation failure handling during evacuation "     \
-          "pauses when marking is in progress")                             \
+  product(bool, G1GCAllocationFailureALotDuringConcMark, true,              \
+          "Trigger evacuation failure handling in collection pauses where " \
+          "marking is in progress")                                         \
                                                                             \
-  product(bool, G1EvacuationFailureALotDuringConcurrentStart, true,         \
-          "Force use of evacuation failure handling during concurrent "     \
-          "start evacuation pauses")                                        \
+  product(bool, G1GCAllocationFailureALotDuringConcurrentStart, true,       \
+          "Trigger evacuation failure handling during concurrent start "    \
+          "collection pauses")                                              \
                                                                             \
-  product(bool, G1EvacuationFailureALotDuringYoungGC, true,                 \
-          "Force use of evacuation failure handling during young "          \
-          "evacuation pauses")                                              \
+  product(bool, G1GCAllocationFailureALotDuringYoungGC, true,               \
+          "Trigger evacuation failure handling during young collection "    \
+          "pauses")                                                         \
                                                                             \
-  product(bool, G1EvacuationFailureALotDuringMixedGC, true,                 \
+  product(bool, G1GCAllocationFailureALotDuringMixedGC, true,               \
           "Force use of evacuation failure handling during mixed "          \
-          "evacuation pauses")                                              \
+          "collection pauses")                                              \
                                                                             \
-  product(uint, G1EvacuationFailureALotCSetPercent, 100,                    \
+  product(uint, G1GCAllocationFailureALotCSetPercent, 100,                  \
           "The percentage of regions in the collection set starting "       \
-          "from the beginning where the forced evacuation failure "         \
-          "injection will be applied.")                                     \
+          "from the beginning where the allocation failures are "           \
+          "injected.")                                                      \
           range(1, 100)
 #else
 #define GC_G1_EVACUATION_FAILURE_FLAGS(develop,                             \
